# animus-subject-zendesk

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
src/: backend.rs  config.rs  main.rs
