[package]
name = "animus-subject-zendesk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zendesk Support ticket subject backend for Animus"
repository = "https://github.com/launchapp-dev/animus-subject-zendesk"
homepage = "https://github.com/launchapp-dev/animus-cli"
readme = "README.md"
default-run = "animus-subject-zendesk"

[lib]
name = "animus_subject_zendesk"
path = "src/lib.rs"

[[bin]]
name = "animus-subject-zendesk"
path = "src/main.rs"

[dependencies]
animus-plugin-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.13" }
animus-subject-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.13" }
animus-plugin-runtime = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.13" }

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[dev-dependencies]
mockito = "1"
